--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,22 @@
             <version>3.17</version>
         </dependency>
 
+        <!-- This dependency is useful to send your report via mail automatically after execution -->
+        <!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.sun.activation/javax.activation -->
+        <dependency>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>javax.activation</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
